--- a/docs/style.css
+++ b/docs/style.css
@@ -45,20 +45,8 @@ html, body {
   margin: 0 auto;
 }
 
-.hint-off {
-  display: inline;
-}
-
-.hint-parent:hover .hint-off {
-  display: none;
-}
-
-.hint-on {
-  display: none;
-}
-
-.hint-parent:hover .hint-on {
-  display: inline;
+a {
+  color: white;
 }
 
 .rocket-container {
