--- a/docs/style.css
+++ b/docs/style.css
@@ -40,7 +40,7 @@ html, body {
 }
 
 .title {
-  flex: 1.5;
+  flex: 2.2;
   text-align: center;
   margin: 0 auto;
 }
@@ -74,6 +74,14 @@ h5 {
   color: white;
   font-weight: 200;
   margin: 0;
+}
+
+h5 a {
+  text-decoration: none;
+}
+
+h5 a:hover {
+  text-decoration: underline;
 }
 
 @media (max-width: 700px) {
